Revert "Fix missing colors for light mode"
This reverts commit b3206c22fadf67e2434030b2a7588a2117527e99.

--- a/website/style.css
+++ b/website/style.css
@@ -1,8 +1,6 @@
 :root {
     --background: #eeeeee;
     --text: #41474e;
-    --accent: #d26878;
-    --link: #5690af;
 }
 
 @media (prefers-color-scheme: dark) {
